<?xml version="1.0"?>
<package format="2">
  <name>laser_filtering</name>
  <version>0.0.5</version>
  <description>ROS Libraries for filtering specific kinds of laser scans</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>map_laser</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
