<package format="2">
  <name>map_laser</name>
  <version>0.0.5</version>
  <description>Filters a laser scan to remove points that are in the current static map</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/map_laser</url>

  <author>David V. Lu!!</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <exec_depend>laser_filters</exec_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
</package>
